--- a/styles.css
+++ b/styles.css
@@ -4,16 +4,8 @@
 }
 
 body {
-    /*padding-top: 40px;*/
+    min-width: 250px;
 }
-
-/*.carousel-item{*/
-/*    height: 600px;*/
-/*}*/
-/*.carousel-item img{*/
-/*    height: 600px;*/
-/*}*/
-
 
 #call {
     position: fixed;
@@ -31,9 +23,84 @@ body {
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
+header {
+    position: relative;
+    height: 80vh;
+    margin: 20px 0px;
+}
+
+#slider {
+    position: absolute;
+    z-index: 2;
+    right: 0;
+    width: 80%;
+    height: 90%;
+    background-color: dimgray;
+    background-image: url("./images/skoda1.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    transition: 0.5s;
+}
+
+#headerBackBox {
+    position: absolute;
+    /*z-index: 1;*/
+    bottom: 0;
+    background-color: #454545;
+    width: 80%;
+    height: 80%;
+}
+
+#header-text-box {
+    position: absolute;
+    z-index: 3;
+    font-size: 80px;
+    font-weight: bold;
+    color: white;
+    text-transform: uppercase;
+    bottom: 100px;
+    left: 45px;
+    line-height: 90px;
+}
+
+.transparent-text {
+    color: transparent;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: white;
+}
+
 
 @media screen and (max-width: 768px) {
     #call {
         display: flex;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    #slider {
+        background-image: url("./images/skodaVert1.jpg");
+    }
+
+    header {
+        position: relative;
+        height: 70vh;
+    }
+
+    #header-text-box {
+        bottom: 70px;
+        font-size: 50px;
+        left: 20px;
+        line-height: 60px;
+    }
+}
+
+@media screen and (min-width: 1080px) {
+    #header-text-box {
+        bottom: 100px;
+        left: 90px;
+        line-height: 100px;
+        font-size: 90px;
     }
 }
