--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,700;1,400&display=swap');
 * {
     padding: 0;
     margin: 0;
@@ -5,11 +6,15 @@
 
 body {
     min-width: 250px;
+    padding-top: 55px;
+}
+nav{
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
 #call {
     position: fixed;
-    display: none;
+    display: flex;
     bottom: 30px;
     right: 30px;
     width: 60px;
@@ -26,7 +31,7 @@ body {
 header {
     position: relative;
     height: 80vh;
-    margin: 20px 0px;
+    margin-bottom: 20px;
 }
 
 #slider {
@@ -41,18 +46,24 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     transition: 0.5s;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
 #headerBackBox {
     position: absolute;
-    /*z-index: 1;*/
     bottom: 0;
     background-color: #454545;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     width: 80%;
     height: 80%;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+
 }
 
 #header-text-box {
+    font-family: 'Lato', sans-serif;
     position: absolute;
     z-index: 3;
     font-size: 80px;
@@ -71,12 +82,22 @@ header {
     -webkit-text-stroke-color: white;
 }
 
-
-@media screen and (max-width: 768px) {
-    #call {
-        display: flex;
-    }
+#towTruck{
+    position: absolute;
+    top: 0px;
+    z-index: 10;
+    width: 70px;
+    left: calc(50% - 35px);
 }
+#towTruck img{
+    width: 100%;
+}
+/*@media screen and (max-width: 768px) {*/
+/*    #call {*/
+/*        display: flex;*/
+/*    }*/
+/*}*/
+
 
 @media screen and (max-width: 550px) {
     #slider {
